@@ -350,6 +350,10 @@ itk_pstransform.m
 ManifoldToolbox
 -------------------------------------------------------------
 
+addpoint2tri.m
+
+	 ADDPOINT2TRI  Add one or more nodes to a triangular mesh
+	
 closest_trifacet.m
 
 	 CLOSEST_TRIFACET  Closest triangular facet of a mesh to a point in 3D
